@@ -1,0 +1,50 @@
+.\"	$NetBSD: rlphy.4,v 1.1 2006/01/04 21:52:17 xtraeme Exp $
+.\"	$OpenBSD: rlphy.4,v 1.11 2005/09/19 21:54:11 jmc Exp $
+.\"
+.\" Copyright (c) 1998 Jason L. Wright (jason@thought.net)
+.\" All rights reserved.
+.\"
+.\" Redistribution and use in source and binary forms, with or without
+.\" modification, are permitted provided that the following conditions
+.\" are met:
+.\" 1. Redistributions of source code must retain the above copyright
+.\"    notice, this list of conditions and the following disclaimer.
+.\" 2. Redistributions in binary form must reproduce the above copyright
+.\"    notice, this list of conditions and the following disclaimer in the
+.\"    documentation and/or other materials provided with the distribution.
+.\"
+.\" THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
+.\" IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+.\" WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+.\" DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT,
+.\" INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+.\" (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+.\" SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
+.\" HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
+.\" STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN
+.\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+.\" POSSIBILITY OF SUCH DAMAGE.
+.\"
+.Dd November 18, 1998
+.Dt RLPHY 4
+.Os
+.Sh NAME
+.Nm rlphy
+.Nd Realtek 8139/8201L Ethernet PHY driver
+.Sh SYNOPSIS
+.Cd "rlphy* at mii?"
+.Sh DESCRIPTION
+The
+.Nm
+driver supports the internal physical layer interface (PHY) found on
+Realtek Semiconductor
+.Tn RTL8139
+based Ethernet adapters, as well as the
+.Tn RTL8201L
+Ethernet PHY chip.
+.Sh SEE ALSO
+.Xr ifmedia 4 ,
+.Xr intro 4 ,
+.Xr mii 4 ,
+.Xr rtk 4 ,
+.Xr ifconfig 8
